# benchhello

./: README.md  wrk-results.txt
benchrust/src/: main.rs
mvc/: pom.xml
mvc/benchhello/src/main/resources/: application.properties
mvc/src/main/java/me/zehua/benchhello/: BenchhelloApplication.java
mvc/src/test/java/me/zehua/benchhello/: BenchhelloApplicationTests.java
react/: pom.xml
react/benchreacthello/src/main/java/me/zehua/benchreacthello/: BenchreacthelloApplication.java
react/src/test/java/me/zehua/benchreacthello/: BenchreacthelloApplicationTests.java
reactive/: pom.xml
reactive-controller/src/main/java/me/zehua/benchreacthello/: BenchreacthelloApplication.java
reactive-old/src/main/java/me/zehua/benchreacthello/: BenchreacthelloApplication.java
reactive/src/main/java/me/zehua/: NettyIouring.java  NettyMain.java  NettyTpc.java  NettyTpcUring.java  ReactorMain.java  UndertowMain.java
rust/: Cargo.toml
rust/src/: main.rs
